--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,9 +14,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-router-hash-link": "^2.4.9",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
+    "react-router-hash-link": "^2.4.3",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
